--- a/StreamingMovie.Web/StreamingMovie.Web.csproj
+++ b/StreamingMovie.Web/StreamingMovie.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Views\Home\ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
