--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+APP_NAME=streaming-movie
 # .env
 ASPNETCORE_URLS=http://+:5000
 ASPNETCORE_ENVIRONMENT=Production
@@ -8,3 +9,6 @@ WEB_PORT=5000
  
 NGINX_PORT_HTTP=80
 NGINX_PORT_HTTPS=443
+
+REGISTRY=103.109.187.143:5001/nguyendat
+APP_NAME_IMAGE=streaming-movie-web-web
