--- a/.env
+++ b/.env
@@ -12,3 +12,17 @@ NGINX_PORT_HTTPS=443
 
 REGISTRY=103.109.187.143:5001/nguyendat
 APP_NAME_IMAGE=streaming-movie-web-web
+
+# Logging
+Logging__LogLevel__Default=Information
+Logging__LogLevel__Microsoft.AspNetCore=Warning
+
+# Connection String
+ConnectionStrings__sqlConnection=server=mysql-movie-context-trandinhgiahuy2004-acde.j.aivencloud.com;port=19890;database=defaultdb;user=avnadmin;password=AVNS_T3KGA02aO3UoWEdkSjC;
+
+# Mail Settings
+MailSettings__Mail=trandinhgiahuy2004@gmail.com
+MailSettings__DisplayName=Huy Tran
+MailSettings__Password=qxfr viji fxad tbmk
+MailSettings__Host=smtp.gmail.com
+MailSettings__Port=587
