--- a/StreamingMovie.Application/StreamingMovie.Application.csproj
+++ b/StreamingMovie.Application/StreamingMovie.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StreamingMovie.Domain\StreamingMovie.Domain.csproj" />
   </ItemGroup>
 
