--- a/StreamingMovie.Infrastructure/StreamingMovie.Infrastructure.csproj
+++ b/StreamingMovie.Infrastructure/StreamingMovie.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AWSSDK.S3" Version="4.0.6" />
     <PackageReference Include="MailKit" Version="4.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
