--- a/StreamingMovie.Application/StreamingMovie.Application.csproj
+++ b/StreamingMovie.Application/StreamingMovie.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.0" />
+    <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
   </ItemGroup>
 
   <ItemGroup>
